# stats

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.rag/: _RAG.md
.rag/arch/: C2_container.md  C3_component.md  C4_code.md
.rag/meta/: build_targets.md  claude_card.md  cmake_summary.md
.rag/test_params/: dsp_stats_SnrEstimatorOp.md  dsp_stats_StatisticsProcessor.md  statistics_SnrEstimatorOp.md  statistics_StatisticsProcessor.md
.rag/use_cases/: helpers_rocm.md  snr_estimator_benchmark.md  snr_estimator_rocm.md  statistics_compute_all_benchmark.md  statistics_float_rocm.md  statistics_rocm.md
Doc/: API.md  Full.md  Patterns.md  Quick.md
cmake/: DspStatsConfig.cmake.in  version.cmake
include/dsp/stats/: branch_selector.hpp  statistics_processor.hpp  statistics_sort_gpu.hpp  statistics_types.hpp
include/dsp/stats/kernels/: gather_decimated_kernel.hpp  peak_cfar_kernel.hpp  statistics_kernels_rocm.hpp
include/dsp/stats/operations/: mean_reduction_op.hpp  median_histogram_complex_op.hpp  median_histogram_op.hpp  median_radix_sort_op.hpp  snr_estimator_op.hpp  welford_float_op.hpp  welford_fused_op.hpp
include/stats/: branch_selector.hpp  statistics_processor.hpp  statistics_sort_gpu.hpp  statistics_types.hpp
include/stats/kernels/: gather_decimated_kernel.hpp  peak_cfar_kernel.hpp  statistics_kernels_rocm.hpp
include/stats/operations/: mean_reduction_op.hpp  median_histogram_complex_op.hpp  median_histogram_op.hpp  median_radix_sort_op.hpp  snr_estimator_op.hpp  welford_float_op.hpp  welford_fused_op.hpp
modules/fft_func/kernels/gfx1201/: manifest.json
modules/statistics/kernels/gfx1201/: manifest.json
python/: CMakeLists.txt  dsp_stats_module.cpp  py_statistics.hpp
src/statistics/: CMakeLists.txt  statistics_processor.cpp  statistics_sort_gpu.hip
src/statistics/include/: branch_selector.hpp  statistics_types.hpp
src/statistics/include/kernels/: gather_decimated_kernel.hpp  peak_cfar_kernel.hpp
src/statistics/include/operations/: mean_reduction_op.hpp  welford_float_op.hpp  welford_fused_op.hpp
src/statistics/kernels/: manifest.json
src/statistics/src/: statistics_processor.cpp  statistics_sort_gpu.hip
src/statistics/tests/: all_test.hpp  snr_estimator_benchmark.hpp  snr_test_helpers.hpp  statistics_compute_all_benchmark.hpp  test_snr_estimator_benchmark.hpp  test_snr_estimator_rocm.hpp  test_statistics_compute_all_benchmark.hpp  test_statistics_rocm.hpp
tests/: CMakeLists.txt  README.md  all_test.hpp  main.cpp  snr_estimator_benchmark.hpp  snr_test_helpers.hpp  statistics_compute_all_benchmark.hpp  test_helpers_rocm.hpp  test_snr_estimator_benchmark.hpp  test_snr_estimator_rocm.hpp  test_statistics_compute_all_benchmark.hpp  test_statistics_float_rocm.hpp  test_statistics_rocm.hpp
